--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ input[type='text'] {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 55%;
+    height: 58%;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -244,6 +244,29 @@ input[type='text'] {
   }
 }
 
+@media only screen and (max-width: 414px) {
+  .search-box {
+    width: 160px;
+    margin-left: 10px;
+  }
+
+  .navbar-links {
+    margin-top: 99px;
+    height: 48%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .search-box {
+    width: 150px;
+    margin-left: 14px;
+  }
+
+  .navbar-links {
+    height: 53%;
+  }
+}
+
 /* Slideshow */
 
 .slideshow-container img {
@@ -303,10 +326,13 @@ input[type='text'] {
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 499px) {
   .slideshow-container p {
-    top: 370px;
-    padding: 10px;
+    display: none;
+  }
+
+  .arrows {
+    display: none;
   }
 }
 
@@ -337,6 +363,12 @@ input[type='text'] {
 .movies-container img {
   cursor: pointer;
   height: 200px;
+  transform: scale(1);
+  transition: 0.3s ease-in-out;
+}
+
+.movies-container img:hover {
+  transform: scale(1.2);
 }
 
 @media only screen and (max-width: 1500px) {
@@ -417,6 +449,51 @@ input[type='text'] {
 @media only screen and (max-width: 550px) {
   .popular-movies {
     left: -70px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .movies-container img {
+    transform: none;
+    transition: none;
+  }
+
+  .movies-container img:hover {
+    transform: none;
+  }
+}
+
+@media only screen and (max-width: 499px) {
+  .popular-movies {
+    position: relative;
+    left: 0;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: -160px;
+    transform: none;
+    letter-spacing: 0.2rem;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .movies-container {
+    grid-template-columns: repeat(3, 100px);
+    grid-gap: 20px 20px;
+  }
+
+  .movies-container img {
+    height: 160px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .movies-container {
+    grid-template-columns: repeat(3, 90px);
+    grid-gap: 20px 20px;
+  }
+
+  .movies-container img {
+    height: 140px;
   }
 }
 
