--- a/css/series.css
+++ b/css/series.css
@@ -166,7 +166,7 @@ input[type='text'] {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 45%;
+    height: 280px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -246,6 +246,7 @@ input[type='text'] {
 @media only screen and (max-width: 520px) {
   .search-box {
     width: 180px;
+    margin-left: 10px;
   }
 }
 
@@ -257,7 +258,7 @@ input[type='text'] {
 
   .navbar-links {
     margin-top: 99px;
-    height: 48%;
+    height: 280px;
   }
 
   .nav-logo img {
@@ -272,10 +273,6 @@ input[type='text'] {
   .search-box {
     width: 150px;
     margin-left: 14px;
-  }
-
-  .navbar-links {
-    height: 53%;
   }
 }
 
