--- a/css/login.css
+++ b/css/login.css
@@ -10,11 +10,6 @@ body {
   font-family: "Roboto", sans-serif;
   color: #ffffff;
   background-color: #00080f;
-  background-image: url("https://images5.alphacoders.com/118/thumb-1920-1188416.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 
 /* Navbar */
@@ -139,80 +134,97 @@ input[type="text"] {
   font-size: 16px;
 }
 
-/* Movies */
+/* Form validation */
 
-.movies-title {
-  display: inline-block;
-  font-size: 1.3rem;
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #bc1d1d;
-  padding: 2px 20px;
-  border-radius: 5px;
+form {
+  padding: 1rem;
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(50%, -50%);
+}
+
+.form-control {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+form span {
+  position: absolute;
+  top: 75px;
+  display: block;
+  visibility: hidden;
+  color: #971d1d;
+}
+
+form span.invalid {
+  visibility: visible;
+}
+
+form h1 {
+  margin: 450px 0 50px 0;
+}
+
+.categories select,
+input {
+  font-size: 1rem;
+  outline: none;
+}
+
+.gender {
+  margin-bottom: 30px;
+}
+
+.agreement {
+  margin-bottom: 3px;
+}
+
+.agreement span {
+  display: inline;
+}
+
+form input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="password"] {
+  padding: 10px;
+  width: 100%;
+  margin: 10px 0;
+  outline: none;
+}
+
+.categories {
+  margin-bottom: 40px;
+}
+
+.categories select {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.submit-btn {
   text-align: center;
 }
 
-.wrapper-title {
-  display: flex;
-  justify-content: center;
-  margin: 50px;
+.submit-btn button {
+  background-color: #bc1d1d;
+  color: #ffffff;
+  width: 150px;
+  padding: 10px;
+  margin: 30px 0;
+  border-radius: 5px;
+  border-style: none;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
 
-.movies-title:hover {
+.submit-btn button:hover {
   background-color: #971d1d;
 }
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  margin: 80px;
-}
-
-.movies-container {
-  display: grid;
-  grid-template-columns: repeat(8, 150px);
-  grid-gap: 30px;
-  margin-top: -50px;
-}
-
-.movies-container img {
-  cursor: pointer;
-  height: 200px;
-  transform: scale(1);
-  transition: 0.3s ease-in-out;
-}
-
-.movies-container img:hover {
-  transform: scale(1.2);
-}
-
-/* Footer */
-
-footer {
-  background-color: #0c1d29;
-  height: 100px;
-  font-size: 14px;
-}
-
-footer ul {
-  position: relative;
-  top: 50%;
-  text-align: left;
-  transform: translateY(-50%);
-  list-style-type: none;
-  line-height: 18px;
-  margin-left: 30px;
-}
-
-.movieflash {
-  position: relative;
-  text-align: center;
-  transform: translateY(-50%);
-}
-
 /* MEDIA QUERIES */
-
-/* SEARCHBAR */
 
 @media only screen and (max-width: 1300px) {
   .nav-logo img {
@@ -241,7 +253,7 @@ footer ul {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 280px;
+    height: 500px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -333,7 +345,7 @@ footer ul {
 
   .navbar-links {
     margin-top: 99px;
-    height: 280px;
+    height: 502px;
   }
 
   .nav-logo img {
@@ -348,93 +360,5 @@ footer ul {
   .search-box {
     width: 150px;
     margin-left: 14px;
-  }
-}
-
-/* MOVIES */
-
-@media only screen and (max-width: 1500px) {
-  .movies-container {
-    grid-template-columns: repeat(6, 150px);
-  }
-}
-
-@media only screen and (max-width: 1115px) {
-  .movies-container {
-    grid-template-columns: repeat(5, 150px);
-  }
-}
-
-@media only screen and (max-width: 968px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 150px);
-  }
-}
-
-@media only screen and (max-width: 750px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 130px);
-  }
-}
-
-@media only screen and (max-width: 680px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 130px);
-    grid-gap: 30px 20px;
-  }
-}
-
-@media only screen and (max-width: 630px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 130px);
-    grid-gap: 30px 50px;
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 130px);
-    grid-gap: 30px 20px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .movies-container img {
-    transform: none;
-    transition: none;
-  }
-
-  .movies-container img:hover {
-    transform: none;
-  }
-}
-
-@media only screen and (max-width: 414px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 120px);
-    grid-gap: 20px 10px;
-  }
-
-  .movies-container img {
-    height: 175px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 104px);
-    grid-gap: 20px 10px;
-  }
-
-  .movies-container img {
-    height: 150px;
-  }
-}
-
-/* FOOTER */
-
-@media only screen and (max-width: 640px) {
-  footer ul {
-    margin-left: -10px;
   }
 }
