--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   background-color: #00080f;
 }
@@ -130,9 +130,184 @@ body {
   margin-top: 1px;
 }
 
-input[type='text'] {
+input[type="text"] {
   font-size: 16px;
 }
+
+/* Slideshow */
+
+.mySlides {
+  display: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+.slideshow-container img {
+  width: 100%;
+  max-height: 500px;
+}
+
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -55px;
+  padding: 16px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 8px 12px;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #bc1d1d;
+}
+
+.numbertext {
+  color: #ffffff;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  border-radius: 5px;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #bc1d1d;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* POPULAR MOVIES */
+
+.popular-movies {
+  position: absolute;
+  left: -40px;
+  margin-top: 240px;
+  text-transform: uppercase;
+  transform: rotate(-90deg);
+  letter-spacing: 0.3rem;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin: -55px auto 55px auto;
+}
+
+.movies-container {
+  display: grid;
+  grid-template-columns: repeat(6, 150px);
+  grid-gap: 50px 50px;
+  margin-top: 100px;
+}
+
+.movies-container img {
+  cursor: pointer;
+  height: 200px;
+  transform: scale(1);
+  transition: 0.3s ease-in-out;
+}
+
+.movies-container img:hover {
+  transform: scale(1.2);
+}
+
+/* Footer */
+
+footer {
+  background-color: #0c1d29;
+  height: 100px;
+  font-size: 14px;
+}
+
+footer ul {
+  position: relative;
+  top: 50%;
+  text-align: left;
+  transform: translateY(-50%);
+  list-style-type: none;
+  line-height: 18px;
+  margin-left: 30px;
+}
+
+.movieflash {
+  position: relative;
+  text-align: center;
+  transform: translateY(-50%);
+}
+
+/* MEDIA QUERIES */
+
+/* SEARCHBAR */
 
 @media only screen and (max-width: 1300px) {
   .nav-logo img {
@@ -271,109 +446,17 @@ input[type='text'] {
   }
 }
 
-/* Slideshow */
+/* SLIDESHOW */
 
-.slideshow-container img {
-  width: 100%;
-  height: 500px;
-}
-
-.arrows {
-  position: relative;
-  margin-top: -280px;
-  cursor: pointer;
-  font-size: 2.5rem;
-}
-
-.fa-arrow-right {
-  margin-right: 80px;
-  float: right;
-}
-
-.fa-arrow-left {
-  margin-left: 80px;
-}
-
-.slideshow-container p {
-  position: absolute;
-  top: 482px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  background: rgba(0, 0, 0, 0.6);
-  padding: 20px;
-  border-radius: 10px;
-  text-align: center;
-  line-height: 1.3rem;
-  white-space: nowrap;
-  max-width: 80%;
-}
-
-@media only screen and (max-width: 1000px) {
-  .slideshow-container p {
-    top: 508px;
-    padding: 15px;
-    line-height: 1rem;
-    font-size: 14px;
-  }
-
-  .arrows {
-    font-size: 2rem;
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .text {
+    font-size: 11px;
   }
 }
 
-@media only screen and (max-width: 650px) {
-  .slideshow-container p {
-    top: 520px;
-    padding: 10px;
-    max-width: 80%;
-    font-size: 12px;
-  }
-}
-
-@media only screen and (max-width: 499px) {
-  .slideshow-container p {
-    display: none;
-  }
-
-  .arrows {
-    display: none;
-  }
-}
-
-/* POPULAR MOVIES */
-
-.popular-movies {
-  position: absolute;
-  left: -40px;
-  margin-top: 490px;
-  text-transform: uppercase;
-  transform: rotate(-90deg);
-  letter-spacing: 0.3rem;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: center;
-  margin: 180px auto 55px auto;
-}
-
-.movies-container {
-  display: grid;
-  grid-template-columns: repeat(6, 150px);
-  grid-gap: 50px 50px;
-  margin-top: 100px;
-}
-
-.movies-container img {
-  cursor: pointer;
-  height: 200px;
-  transform: scale(1);
-  transition: 0.3s ease-in-out;
-}
-
-.movies-container img:hover {
-  transform: scale(1.2);
-}
+/* MOVIES */
 
 @media only screen and (max-width: 1500px) {
   .movies-container {
@@ -401,22 +484,12 @@ input[type='text'] {
   .movies-container img {
     height: 180px;
   }
-
-  .popular-movies {
-    margin-top: 440px;
-  }
 }
 
 @media only screen and (max-width: 1115px) {
   .movies-container {
     grid-template-columns: repeat(4, 140px);
     grid-gap: 30px 30px;
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  .movies-container {
-    margin-top: 110px;
   }
 }
 
@@ -483,9 +556,13 @@ input[type='text'] {
     left: 0;
     text-align: center;
     margin-top: 30px;
-    margin-bottom: -255px;
+    margin-bottom: -225px;
     transform: none;
     letter-spacing: 0.2rem;
+  }
+
+  .movies-container {
+    margin-top: 250px;
   }
 }
 
@@ -511,29 +588,7 @@ input[type='text'] {
   }
 }
 
-/* Footer */
-
-footer {
-  background-color: #0c1d29;
-  height: 100px;
-  font-size: 14px;
-}
-
-footer ul {
-  position: relative;
-  top: 50%;
-  text-align: left;
-  transform: translateY(-50%);
-  list-style-type: none;
-  line-height: 18px;
-  margin-left: 30px;
-}
-
-.movieflash {
-  position: relative;
-  text-align: center;
-  transform: translateY(-50%);
-}
+/* FOOTER */
 
 @media only screen and (max-width: 640px) {
   footer ul {
