--- a/css/impressum.css
+++ b/css/impressum.css
@@ -10,11 +10,6 @@ body {
   font-family: "Roboto", sans-serif;
   color: #ffffff;
   background-color: #00080f;
-  background-image: url("https://www.teahub.io/photos/full/335-3352052_joker-heath-ledger-wallpaper-hd.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 
 /* Navbar */
@@ -139,51 +134,8 @@ input[type="text"] {
   font-size: 16px;
 }
 
-/* Movies */
-
-.movies-title {
-  display: inline-block;
-  font-size: 1.3rem;
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #bc1d1d;
-  padding: 2px 20px;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.wrapper-title {
-  display: flex;
-  justify-content: center;
-  margin: 50px;
-}
-
-.movies-title:hover {
-  background-color: #971d1d;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: center;
-  margin: 80px;
-}
-
-.movies-container {
-  display: grid;
-  grid-template-columns: repeat(8, 150px);
-  grid-gap: 30px;
-  margin-top: -50px;
-}
-
-.movies-container img {
-  cursor: pointer;
-  height: 200px;
-  transform: scale(1);
-  transition: 0.3s ease-in-out;
-}
-
-.movies-container img:hover {
-  transform: scale(1.2);
+article {
+  padding: 0 30px;
 }
 
 /* Footer */
@@ -192,6 +144,7 @@ footer {
   background-color: #0c1d29;
   height: 100px;
   font-size: 14px;
+  margin-top: 25px;
 }
 
 footer ul {
@@ -248,7 +201,7 @@ footer ul li a {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 280px;
+    height: 500px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -340,7 +293,7 @@ footer ul li a {
 
   .navbar-links {
     margin-top: 99px;
-    height: 280px;
+    height: 502px;
   }
 
   .nav-logo img {
@@ -355,86 +308,6 @@ footer ul li a {
   .search-box {
     width: 150px;
     margin-left: 14px;
-  }
-}
-
-/* MOVIES */
-
-@media only screen and (max-width: 1500px) {
-  .movies-container {
-    grid-template-columns: repeat(6, 150px);
-  }
-}
-
-@media only screen and (max-width: 1115px) {
-  .movies-container {
-    grid-template-columns: repeat(5, 150px);
-  }
-}
-
-@media only screen and (max-width: 968px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 150px);
-  }
-}
-
-@media only screen and (max-width: 750px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 130px);
-  }
-}
-
-@media only screen and (max-width: 680px) {
-  .movies-container {
-    grid-template-columns: repeat(4, 130px);
-    grid-gap: 30px 20px;
-  }
-}
-
-@media only screen and (max-width: 630px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 130px);
-    grid-gap: 30px 50px;
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 130px);
-    grid-gap: 30px 20px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .movies-container img {
-    transform: none;
-    transition: none;
-  }
-
-  .movies-container img:hover {
-    transform: none;
-  }
-}
-
-@media only screen and (max-width: 414px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 120px);
-    grid-gap: 20px 10px;
-  }
-
-  .movies-container img {
-    height: 175px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  .movies-container {
-    grid-template-columns: repeat(3, 104px);
-    grid-gap: 20px 10px;
-  }
-
-  .movies-container img {
-    height: 150px;
   }
 }
 
