--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.95);
+  background: #00080f;
   width: 100%;
   height: 100%;
 }
@@ -308,10 +308,19 @@ img {
   padding: 0 20px;
 }
 
+.movie-popup-text h2 {
+  font-size: 3rem;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
 .movie-popup-text table {
   margin-top: 30px;
   text-align: left;
   width: 100%;
+  padding: 10px;
+  border: 3px dashed #ffffff;
+  border-radius: 5px;
 }
 
 .movie-popup video {
@@ -564,6 +573,10 @@ footer ul li a {
   .movie-popup video {
     width: 100%;
     background-color: none;
+  }
+
+  .movie-popup-text h2 {
+    font-size: 2rem;
   }
 
   .movie-popup .close {
