--- a/css/movies.css
+++ b/css/movies.css
@@ -186,6 +186,68 @@ input[type="text"] {
   transform: scale(1.1);
 }
 
+.movie-popup {
+  display: flex;
+  position: fixed;
+  visibility: hidden;
+  z-index: 10000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #00080f;
+  width: 100%;
+  height: 100%;
+}
+
+.movie-popup.active {
+  visibility: visible;
+}
+
+.popup-wrapper {
+  display: flex;
+}
+
+.movie-popup-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 20px;
+}
+
+.movie-popup-text h2 {
+  font-size: 3rem;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.movie-popup-text table {
+  margin-top: 30px;
+  text-align: left;
+  width: 100%;
+  padding: 10px;
+  border: 3px dashed #ffffff;
+  border-radius: 5px;
+}
+
+.movie-popup video {
+  width: 50%;
+  padding: 0 20px;
+  background-color: #000000;
+}
+
+.movie-popup .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+  background: #ffffff;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  transition: 0.01s ease-in-out;
+}
+
 .movies-item {
   text-align: center;
 }
@@ -389,6 +451,30 @@ footer ul li a {
 @media only screen and (max-width: 968px) {
   .movies-container {
     grid-template-columns: repeat(4, 150px);
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  tr {
+    margin-bottom: 10px;
+  }
+
+  .popup-wrapper {
+    display: block;
+  }
+
+  .movie-popup video {
+    width: 100%;
+    background-color: none;
+  }
+
+  .movie-popup-text h2 {
+    font-size: 2rem;
+  }
+
+  .movie-popup .close {
+    z-index: 10001;
+    right: 10px;
   }
 }
 
