--- a/css/login.css
+++ b/css/login.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -222,6 +227,40 @@ input[type="password"] {
 
 .submit-btn button:hover {
   background-color: #971d1d;
+}
+
+/* Footer */
+
+.footer-wrapper {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0c1d29;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: -350px;
+}
+
+footer ul {
+  list-style-type: none;
+  text-decoration: none;
+  flex: 1;
+  display: block;
+  margin-top: 15px;
+}
+
+footer ul li a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.movieflash {
+  flex: 1;
+  margin-right: 130px;
 }
 
 /* MEDIA QUERIES */
