--- a/css/imprint.css
+++ b/css/imprint.css
@@ -37,6 +37,10 @@ body {
   transition: all 0.4s;
 }
 
+.back-to-top:hover {
+  background-color: #971d1d;
+}
+
 .back-to-top.active {
   bottom: 32px;
   pointer-events: auto;
