--- a/css/movies.css
+++ b/css/movies.css
@@ -500,6 +500,20 @@ footer ul li a {
   .movies-container img {
     height: 175px;
   }
+
+  .nav-logo img {
+    width: 95px;
+    height: 85px;
+    margin-top: 8px;
+  }
+
+  .movie-popup-text p {
+    margin-top: -10px;
+  }
+
+  .movie-popup-text table {
+    margin-top: auto;
+  }
 }
 
 @media only screen and (max-width: 375px) {
